<?xml version="1.0"?>
<package format="2">
  <name>mushr_sim</name>
  <version>1.0.0</version>
  <description>A simulator for the MuSHR car. Created by Patrick Lancaster</description>

  <maintainer email="schmittle@cs.washington.edu">schmittle</maintainer>
  <maintainer email="rockettm@cs.washington.edu">Matthew Rockett</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>mushr_base</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>mushr_base</exec_depend>
  <exec_depend>vesc</exec_depend>

  <export>
  </export>
</package>
